--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,11 +11,13 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
+      # ---------- 1. 拉代码 ----------
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0          # 需要完整历史计算版本号
+          fetch-depth: 0          # 需要完整历史
 
+      # ---------- 2. 环境 ----------
       - name: Set up JDK 8
         uses: actions/setup-java@v4
         with:
@@ -28,30 +30,36 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
 
+      # ---------- 3. 构建 ----------
       - name: Build plugin
         run: mvn clean package -B
 
-      # ---- 自动版本号 ----
+      # ---------- 4. 计算版本号 ----------
       - name: Calc next tag
         id: tag
         run: |
-          # 获取最新 tag（如 v1.2.3）或初始值
-          latest=$(git describe --tags --match="v*" --abbrev=0 2>/dev || echo "v0.0.0")
-          # 去掉 v 并按 . 分割
-          IFS=. read -r major minor patch <<<"${latest#v}"
-          # 日期小版本：2025-09-15 -> 915
-          datePatch=$(date +%-m%-d)
-          # 如果今天已发布，则追加自增序号
-          if [[ "$latest" == *"$datePatch"* ]]; then
-            suffix=${latest##*.}
-            patch=$((suffix + 1))
+          # 取今天日期 20251003
+          today=$(date +%Y%m%d)
+          # 查找今天已发布的 tag：v20251003.1  v20251003.2 ...
+          latestToday=$(git tag -l "v${today}.*" --sort=-version:refname | head -n1)
+          if [[ -z "$latestToday" ]]; then
+            seq=1
           else
-            patch=$datePatch
+            seq=$((${latestToday##*.} + 1))
           fi
-          next="v${major}.${minor}.${patch}"
+          next="v${today}.${seq}"
           echo "tag=$next" >> $GITHUB_OUTPUT
+          echo "Next tag will be: $next"
 
-      # ---- 创建 Release 并上传 jar ----
+      # ---------- 5. 打 tag 并 push ----------
+      - name: Create and push tag
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git tag ${{ steps.tag.outputs.tag }}
+          git push origin ${{ steps.tag.outputs.tag }}
+
+      # ---------- 6. 创建 Release 并上传 jar ----------
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
